test/yaml/testdata/output/combined/routing-complex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: production
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: app.example.com
    name: app-example-com-http
    port: 80
    protocol: HTTP
  - hostname: old.example.com
    name: old-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-redirect-with-code-app-example-com
  namespace: production
spec:
  hostnames:
  - app.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: api-service
      port: 8080
    filters:
    - extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: app-redirect-with-code-app-example-com-1
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-impl-specific-0
  - backendRefs:
    - name: user-service
      port: 8080
    matches:
    - path:
        type: RegularExpression
        value: /api/v[0-9]+/users
    name: rule-impl-specific-0
  - backendRefs:
    - name: product-service
      port: 8080
    matches:
    - path:
        type: RegularExpression
        value: /api/v[0-9]+/products
    name: rule-impl-specific-1
  - backendRefs:
    - name: api-service
      port: 8080
    filters:
    - requestRedirect:
        hostname: maintenance.example.com
        scheme: https
        statusCode: 302
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /maintenance
    name: rule-prefix-maintenance
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https-old-example-com
  namespace: production
spec:
  hostnames:
  - old.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: api-service
      port: 8080
    filters:
    - requestRedirect:
        hostname: app.example.com
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-prefix-root
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: app-redirect-with-code-app-example-com-1
  namespace: production
spec:
  urlRewrite:
    path:
      replaceRegexMatch:
        pattern: ^/v1/legacy(/|$)(.*)$
        substitution: /api/\2
      type: ReplaceRegexMatch
